--- a/CSS/style.css
+++ b/CSS/style.css
@@ -13,6 +13,21 @@
 }
 /* ======================================= */
 
+/* Grid container input type buttons format */
+.grid-container_inputType {
+	display: grid;
+	grid-template-columns: auto auto;
+	padding: 10px;
+}
+
+.grid-item_inputType {
+	background-color: rgba(255, 255, 255, 0.8);
+	padding: 20px;
+	font-size: 30px;
+	text-align: center;
+}
+/* ======================================== */
+
 /* Primary class main menu buttons */
 .buttonMainMenu {
 	background-color: #4CAF50;
@@ -74,6 +89,23 @@
 	color: white;
 }
 /* ============================= */
+
+/* Primary class ticket button */
+.buttonTicket {
+	background-color: #4CAF50;
+	border: none;
+	color: white;
+	padding: 16px 32px;
+	text-align: center;
+	text-decoration: none;
+	display: inline-block;
+	font-size: 16px;
+	margin: 4px 2px;
+	-webkit-transition-duration: 0.4s;
+	transition-duration: 0.4s;
+	cursor: pointer;
+}
+/* =========================== */
 
 /* Header format */
 h1 {
